--- a/style.css
+++ b/style.css
@@ -71,3 +71,56 @@
     /* stays fixed once scroll occurs */
     /* it's relative by default (doesn't move out of normal flow), once you specify top value it becomes sticky */
 }
+
+
+
+
+/* Display Property */
+/* Treats an element as block or inline */
+/* Blocks are created top-to-bottom */
+/* Inline are positioned side by side */
+
+.display-container{
+    margin-top: 2em;
+}
+
+.block-container{
+    border: 2px solid black;
+    margin-top: 2px;
+}
+
+.inline-element{
+    margin: 5px;
+    display: block;
+    /* turns buttons into blocks and aligns in a column */
+    }
+
+.inline-block{
+border: 2px solid black;
+margin-top: 2px;
+/* Initially a block */
+/*display: inline;
+/* Acts like an inline element but can't change their size */
+
+display: inline-block;
+width: 125px;
+/*Allows us to set the width and height of an inline element */
+}
+
+.float-container{
+    margin-top: 2em;
+    border: 2px solid blue;
+    height: 20vw;
+}
+
+.float-box{
+    margin: 5px;
+    border: 2px solid orange;
+    background-color: orange;
+    width: 50px;
+    height: 50px;
+
+    float: right;
+    /* shifts elements from left to right. Left is default */
+}
+
